Adjust position of edit icon

--- a/src/assets/styles/admin-home.scss
+++ b/src/assets/styles/admin-home.scss
@@ -205,6 +205,7 @@
           font-weight: inherit;
           vertical-align: middle;
           height: 100%;
+          
           &-unpaid,
           &-unshipped {
             padding: 16px;
@@ -227,6 +228,12 @@
           gap: 4px;
         }
       }
+    }
+
+    .orders-custom-tbody-th.edit-th {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .col-edit {
